syntax = "proto3";

option csharp_namespace = "gRPC.Server.Protos";

import "models.proto";
import "google/protobuf/empty.proto";

service TrackingService {
	rpc SendMessage(TrackingMessage) returns (TrackingResponse);
	rpc KeepAlive(stream PulseMessage) returns (google.protobuf.Empty);
}

